Fix alignment issues for mobile devices
Mobile devices were experiencing awkward center alignments. To fix, remove the forced center.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4958,7 +4958,7 @@ input, select, textarea {
 			-webkit-flex-direction: column-reverse;
 			-ms-flex-direction: column-reverse;
 			flex-direction: column-reverse;
-			text-align: center !important;
+			/* text-align: center !important; */
 		}
 
 			.spotlight.style1 .content {
@@ -5133,7 +5133,7 @@ input, select, textarea {
 				-webkit-flex-direction: column-reverse;
 				-ms-flex-direction: column-reverse;
 				flex-direction: column-reverse;
-				text-align: center !important;
+				/* text-align: center !important; */
 			}
 
 				.spotlight.style2 .content {
@@ -5387,7 +5387,7 @@ input, select, textarea {
 				-webkit-flex-direction: column-reverse;
 				-ms-flex-direction: column-reverse;
 				flex-direction: column-reverse;
-				text-align: center !important;
+				/* text-align: center !important; */
 			}
 
 				.spotlight.style3 .content {
